--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,15 @@
             </configuration>
         </plugin>
     </plugins>
-</build>
+</build> 
 
   <dependencies>
+  <dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>6.14.3</version>
+    <scope>test</scope>
+</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
