--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,15 @@
                 <target>1.6</target>
             </configuration>
         </plugin>
+        
+         
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.19.1</version>
+        </plugin>
+  
+        
     </plugins>
 </build> 
 
